<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="remove">R</string>
    <string name="percentage">%</string>
    <string name="sen">sen</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">π</string>
    <string name="factorial">!x</string>
    <string name="square">√x</string>
    <string name="e">e</string>
    <string name="moreLess">+/-</string>
    <string name="random">Rand</string>
    <string name="labelScientific">CALCULADORA CIENTÍFICA</string>
    <string name="labelBasic">CALCULADORA BÁSICA</string>








    <string name="division">/</string>
    <string name="subtraction">-</string>
    <string name="multiplication">x</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


</resources>