<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/black"
    android:id="@+id/root_layout">


    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/labelBasic"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:onClick="onClick"
        />


    <!--Casilla de resultado-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/textview_custom"
        android:gravity="end|bottom"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitle"
        />

    <GridLayout
        android:layout_width="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:columnCount="4"
        android:gravity="center_horizontal"
        android:rowCount="5"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:padding="10dp">

        <!--Los bordes se customizan desde el background-->
        <!--Botón reset-->
        <Button
            android:id="@+id/btnAc"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/ac"
            style="@style/CustomButtonStyle"/>

        <!--Botón borrar-->
        <Button
            app:iconPadding="0dp"
            app:icon="@drawable/delete"
            app:iconGravity= "textStart"
            app:iconSize="45dp"
            app:iconTint="@color/orange"
            android:id="@+id/btnRemove"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            style="@style/CustomButtonStyle"/>

        <!--Botón Porcentaje-->
        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey"
            android:text="@string/percentage"
            style="@style/CustomButtonStyle" />

        <!--Botón División-->
        <Button
            android:id="@+id/btnDivision"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/division"
            style="@style/CustomButtonStyle"
             />

        <!--Botón siete-->
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey"
            android:text="@string/seven"
            style="@style/CustomButtonStyle.numbers" />


        <!--Botón ocho-->
        <Button
            android:id="@+id/btnEight"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/eight"
            style="@style/CustomButtonStyle.numbers" />

        <!--Botón nine-->
        <Button
            android:id="@+id/btnNine"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/nine"
            style="@style/CustomButtonStyle.numbers"/>

        <!--Botón Multiplicación-->
        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/multiplication"
            style="@style/CustomButtonStyle" />

        <!--Botón cuatro-->
        <Button
            android:id="@+id/btnFour"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/four"
            style="@style/CustomButtonStyle.numbers"/>

        <!--Botón cinco-->
        <Button
            android:id="@+id/btnFive"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/five"
            style="@style/CustomButtonStyle.numbers" />

        <!--Botón seis-->
        <Button
            android:id="@+id/btnSix"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/six"
            style="@style/CustomButtonStyle.numbers" />

        <!--Botón resta-->
        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/subtraction"
            style="@style/CustomButtonStyle"/>

        <!--Botón uno-->
        <Button
            android:id="@+id/btnOne"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/one"
            style="@style/CustomButtonStyle.numbers" />

        <!--Botón dos-->
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/two"
            style="@style/CustomButtonStyle.numbers"/>

        <!--Botón tres-->
        <Button
            android:id="@+id/btnThree"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/three"
            style="@style/CustomButtonStyle.numbers" />

        <!--Botón sumar-->
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/add"
            style="@style/CustomButtonStyle" />

        <!--Botón cero-->
        <Button
            android:id="@+id/btnZero"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/zero"
            style="@style/CustomButtonStyle.numbers"/>

        <!--Botón igual-->
        <Button
            android:id="@+id/btnEquals"
            android:layout_width="@dimen/max_width_btn"
            android:layout_height="@dimen/max_height_btn"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/equals"
            style="@style/CustomButtonStyle.equals" />


    </GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>



